--- a/index.html
+++ b/index.html
@@ -1174,6 +1174,39 @@ button {
     line-height: 1.5;
     font-size: 14px;
 }
+  .trust-block {
+    margin: 35px 0;
+}
+
+.trust-title {
+    margin-bottom: 18px;
+}
+
+.trust-card {
+    display: flex;
+    gap: 14px;
+    background: rgba(255,255,255,0.04);
+    padding: 16px;
+    border-radius: 16px;
+    margin-bottom: 14px;
+    border: 1px solid rgba(255,255,255,0.06);
+}
+
+.trust-icon {
+    font-size: 22px;
+    min-width: 28px;
+}
+
+.trust-heading {
+    font-weight: 600;
+    margin-bottom: 6px;
+}
+
+.trust-text {
+    font-size: 13px;
+    line-height: 1.5;
+    color: #ccc;
+}
 
 </style>
 </head>
@@ -2069,6 +2102,55 @@ function openDelivery(type) {
                     Укажите населённый пункт, выберите способ доставки и оплаты, заполните данные и нажмите <b>«оформить заказ»</b>
                 </div>
             </div>
+            <div class="trust-block">
+
+    <h3 class="trust-title">Гарантии безопасности</h3>
+
+    <div class="trust-card">
+        <div class="trust-icon">🔒</div>
+        <div>
+            <div class="trust-heading">Конфиденциальность</div>
+            <div class="trust-text">
+                Персональные данные используются исключительно для выполнения доставки.
+                Мы соблюдаем и обеспечиваем защиту информации на всех этапах обработки.
+            </div>
+        </div>
+    </div>
+
+    <div class="trust-card">
+        <div class="trust-icon">📦</div>
+        <div>
+            <div class="trust-heading">Анонимность</div>
+            <div class="trust-text">
+                Получение заказа возможно по коду подтверждения без разглашения
+                дополнительных сведений. Минимум формальностей — максимум приватности.
+            </div>
+        </div>
+    </div>
+
+    <div class="trust-card">
+        <div class="trust-icon">🛡</div>
+        <div>
+            <div class="trust-heading">Безопасность</div>
+            <div class="trust-text">
+                Отправления хранятся в защищённых зонах выдачи. Доступ к заказу
+                получает только адресат после подтверждения. На ПВЗ можно проверить товар.
+            </div>
+        </div>
+    </div>
+
+    <div class="trust-card">
+        <div class="trust-icon">🚚</div>
+        <div>
+            <div class="trust-heading">Незаметная упаковка</div>
+            <div class="trust-text">
+                Посылка оформляется в стандартную непрозрачную упаковку без описания
+                содержимого. Внешний вид не привлекает лишнего внимания.
+            </div>
+        </div>
+    </div>
+
+</div>
 
         </div>
 
