--- a/index.html
+++ b/index.html
@@ -1210,8 +1210,13 @@ button {
   /* ===== PAYMENT FULL CARD ===== */
 
 .payment-full-card {
+    background: #181818;
+    border-radius: 18px;
     padding: 20px;
-    animation: fadeIn 0.3s ease-in-out;
+    box-shadow:
+        0 0 0 1px rgba(255,255,255,0.03),
+        0 10px 40px rgba(0,0,0,0.6);
+    animation: fadeInUp 0.3s ease-out;
 }
 
 .payment-title {
@@ -1282,17 +1287,16 @@ button {
     padding: 20px;
 }
 
-.payment-full-card {
-    background: #181818;
-    border-radius: 18px;
-    padding: 20px;
-    box-shadow: 0 10px 25px rgba(0,0,0,0.4);
-}
-
 .payment-header {
     font-size: 20px;
     font-weight: 600;
     margin-bottom: 18px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.payment-header span {
     display: flex;
     align-items: center;
     gap: 8px;
@@ -1366,6 +1370,16 @@ button {
     border-radius: 10px;
     font-size: 12px;
     margin-left: auto;
+}
+  @keyframes fadeInUp {
+    from {
+        opacity: 0;
+        transform: translateY(15px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
 </style>
