--- a/index.html
+++ b/index.html
@@ -2242,7 +2242,7 @@ content = `
 
 `;
 }
-  if (type === 'yandex_delivery') {
+  if (type === 'yandex_courier') {
 content = `
 
 <div class="delivery-full-wrapper">
@@ -2297,7 +2297,7 @@ content = `
 
 `;
 }
-  if (type === '5post') {
+  if (type === 'fivepost') {
 content = `
 
 <div class="delivery-full-wrapper">
