--- a/index.html
+++ b/index.html
@@ -1269,10 +1269,15 @@ button {
     background: linear-gradient(90deg,#f5c32c,#ffb300);
     padding: 14px 18px;
     border-radius: 14px;
+
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    gap: 6px;
+
     font-weight: 600;
     color: #111;
+    text-align: center;
 }
 
 .payment-title {
